[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ranking-utils"
description = "Miscellaneous utilities for ranking models"
authors = [
    {name = "Jurek Leonhardt"},
]
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["information retrieval", "ranking", "search"]
requires-python = ">= 3.9"
dependencies = [
    "torch >= 2.3.0, < 3",
    "pytorch-lightning >= 2.3.0, < 3",
    "torchmetrics >= 1.4.0, < 2",
    "numpy >= 1.26.0, < 2",
    "h5py >= 3.11.0, < 4",
    "hydra-core >= 1.3, < 2",
    "tqdm"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
]

[project.urls]
Repository = "https://github.com/mrjleo/ranking-utils"
