[metadata]
name = ranking-utils
description = Miscellaneous utilities for ranking models
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrjleo/ranking-utils

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    torch >=1.8
    pytorch-lightning >=1.3.0
    torchmetrics >=0.3.2
    h5py >=3.0.0
    torchtext >=0.10.0
    nltk
    numpy
    tqdm

[options.packages.find]
where = src
