[metadata]
name = ranking-utils
description = Miscellaneous utilities for ranking models
author = Jurek Leonhardt
license = MIT
version = attr: ranking_utils.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrjleo/ranking-utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = .
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    setuptools
    torch >=1.8.2
    pytorch-lightning >=1.5.10
    torchmetrics >=0.7.2
    h5py >=3.0.0
    numpy
    tqdm

[options.packages.find]
where = .
